Font sizing fix for iOS

--- a/example.html
+++ b/example.html
@@ -58,7 +58,7 @@
   <script src="tappivate.js"></script>
 
   <script id="tmpl-list" type="text/html">
-    <h2>Try tapping and scrolling me.</h2>
+    <h2>Try tapping & scrolling me.</h2>
     <ul>
       <li data-tap="list">Tap Me</li>
       <li data-tap="list">Scroll Me</li>
