Moved list data-tap attribute to list container.

--- a/example.html
+++ b/example.html
@@ -59,37 +59,41 @@
 
   <script id="tmpl-list" type="text/html">
     <h2>Try tapping & scrolling me.</h2>
-    <ul>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
-      <li data-tap="list">Tap Me</li>
-      <li data-tap="list">Scroll Me</li>
+    <ul data-tap="list">
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
+      <li>Tap Me</li>
+      <li>Scroll Me</li>
     </ul>
   </script>
 
